--- a/public/css/prototipoContatos.css
+++ b/public/css/prototipoContatos.css
@@ -113,6 +113,7 @@ a:focus {
 }
 .frame__links {
 	display: inline;
+	line-height: 50px;
 }
 .frame__links a:not(:last-child),
 .frame__demos a:not(:last-child) {
@@ -353,17 +354,22 @@ a:focus {
 	font: inherit;
 	font-size: 0.875rem;
 	font-weight: 500;
-	background: #000;
+	background: var(--color-link);
 	padding: 1rem 2rem;
 	display: inline-block;
 	cursor: pointer;
 	margin-bottom: 1rem;
 }
-.preview__item-button:hover,
-.preview__item-button:active,
-.preview__item-button:focus {
+.preview__item-button.max {
+	background: #000 !important;
+	cursor: auto !important;
+}
+
+.preview__item-button:not(.max):hover,
+.preview__item-button:not(.max):active,
+.preview__item-button:not(.max):focus {
 	outline: none;
-	background: var(--color-link);
+	background: #000;
 }
 .cursor {
 	display: none;
@@ -399,6 +405,7 @@ a:focus {
 	.frame__title-wrap {
 		grid-area: title;
 		display: flex;
+		line-height: 50px;
 	}
 	.frame__title {
 		margin: 0;
