--- a/public/css/prototipoContatos.css
+++ b/public/css/prototipoContatos.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
+
 *,
 *:after,
 *:before {
 	box-sizing: border-box;
 }
+
 :root {
 	font-size: 18px;
 }
+
 html,
 body,
 main {
@@ -14,6 +17,7 @@ main {
 	width: 100%;
 	position: relative;
 }
+
 body {
 	margin: 0;
 	--color-text: #000;
@@ -32,17 +36,20 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
 a {
 	text-decoration: underline;
 	color: var(--color-link);
 	outline: none;
 }
+
 a:hover,
 a:focus {
 	text-decoration: none;
 	color: var(--color-link-hover);
 	outline: none;
 }
+
 .unbutton {
 	background: none;
 	border: 0;
@@ -51,9 +58,11 @@ a:focus {
 	font: inherit;
 	cursor: pointer;
 }
+
 .unbutton:focus {
 	outline: none;
 }
+
 /* Page Loader */
 .js .loading:before,
 .js .loading:after {
@@ -61,6 +70,7 @@ a:focus {
 	position: fixed;
 	z-index: 1000;
 }
+
 .js .loading:before {
 	top: 0;
 	left: 0;
@@ -68,6 +78,7 @@ a:focus {
 	height: 100%;
 	background: var(--color-bg);
 }
+
 .js .loading:after {
 	top: 50%;
 	left: 50%;
@@ -79,12 +90,14 @@ a:focus {
 	background: var(--color-link);
 	animation: loaderAnim 0.7s linear infinite alternate forwards;
 }
+
 @keyframes loaderAnim {
 	to {
 		opacity: 1;
 		transform: scale3d(0.5, 0.5, 1);
 	}
 }
+
 .message {
 	position: relative;
 	z-index: 100;
@@ -94,6 +107,7 @@ a:focus {
 	font-size: 0.75rem;
 	position: relative;
 }
+
 .no-select {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -101,32 +115,39 @@ a:focus {
 	-ms-user-select: none;
 	user-select: none;
 }
+
 .frame {
 	padding: 1rem 5vw;
 	position: relative;
 	z-index: 1000;
 }
+
 .frame__title {
 	font-size: 1rem;
 	margin: 0 0 1rem;
 	font-weight: normal;
 }
+
 .frame__links {
 	display: inline;
 	line-height: 50px;
 }
+
 .frame__links a:not(:last-child),
 .frame__demos a:not(:last-child) {
 	margin-right: 1rem;
 }
+
 .frame__demos {
 	margin: 1rem 0;
 }
+
 .frame__demo--current,
 .frame__demo--current:hover {
 	color: var(--color-text);
 	text-decoration: none;
 }
+
 .contentContatos {
 	display: flex;
 	flex-direction: column;
@@ -136,6 +157,7 @@ a:focus {
 	position: relative;
 	align-items: center;
 }
+
 .gridContatos {
 	position: absolute;
 	width: 120%;
@@ -147,14 +169,17 @@ a:focus {
 	grid-template-rows: repeat(50, 2%);
 	perspective: 1000px;
 }
+
 .grid--inactive {
 	pointer-events: none;
 }
+
 .grid__item {
 	position: relative;
 	will-change: transform;
 	grid-area: var(--grid-row) / var(--grid-column) / span 12 / span 5;
 }
+
 .grid__item-img {
 	position: relative;
 	width: 100%;
@@ -164,74 +189,92 @@ a:focus {
 	border-radius: 10px;
 	will-change: transform;
 }
+
 .char {
 	will-change: transform;
 }
+
 /* Shorthand grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end */
 .pos-1 {
 	--grid-row: 6;
 	--grid-column: 1;
 }
+
 .pos-2 {
 	--grid-row: 1;
 	--grid-column: 18;
 }
+
 .pos-3 {
 	--grid-row: 1;
 	--grid-column: 29;
 }
+
 .pos-4 {
 	--grid-row: 15;
 	--grid-column: 12;
 }
+
 .pos-5 {
 	--grid-row: 17;
 	--grid-column: 25;
 }
+
 .pos-6 {
 	--grid-row: 20;
 	--grid-column: 43;
 }
+
 .pos-7 {
 	--grid-row: 35;
 	--grid-column: 5;
 }
+
 .pos-8 {
 	--grid-row: 40;
 	--grid-column: 14;
 }
+
 .pos-9 {
 	--grid-row: 37;
 	--grid-column: 29;
 }
+
 .pos-10 {
 	--grid-row: 35;
 	--grid-column: 42;
 }
+
 .pos-11 {
 	--grid-row: 6;
 	--grid-column: 44;
 }
+
 .pos-12 {
 	--grid-row: 32;
 	--grid-column: 20;
 }
+
 .pos-13 {
 	--grid-row: 22;
 	--grid-column: 2;
 }
+
 .pos-14 {
 	--grid-row: 9;
 	--grid-column: 38;
 }
+
 .pos-15 {
 	--grid-row: 4;
 	--grid-column: 7;
 }
+
 .pos-16 {
 	--grid-row: 28;
 	--grid-column: 36;
 }
+
 .content__title {
 	font-size: 12vw;
 	margin: 0;
@@ -241,22 +284,27 @@ a:focus {
 	text-transform: uppercase;
 	pointer-events: none;
 }
+
 .content__title-line {
 	display: block;
 	position: relative;
 	overflow: hidden;
 	line-height: 1;
 }
+
 .content__title-line--1 {
 	margin-left: -5vw;
 }
+
 .content__title-line--2 {
 	margin-right: -5vw;
 }
+
 .preview {
 	position: relative;
 	pointer-events: none;
 }
+
 .js .preview {
 	width: 100%;
 	height: 100%;
@@ -264,6 +312,7 @@ a:focus {
 	top: 0;
 	left: 0;
 }
+
 .preview__item {
 	position: relative;
 	margin: 0 auto;
@@ -276,18 +325,22 @@ a:focus {
 		'preview-img preview-title'
 		'preview-content preview-content';
 }
+
 .js .preview__item {
 	perspective: 1000px;
 }
+
 .js .preview__item:not(.preview__item--open) {
 	position: absolute;
 	overflow: hidden;
 	height: 0;
 	opacity: 0;
 }
+
 .js .preview__item--open {
 	pointer-events: auto;
 }
+
 .preview__item-back {
 	grid-area: preview-back;
 	justify-self: start;
@@ -298,6 +351,7 @@ a:focus {
 	margin-bottom: 1rem;
 	background: url(../img/arrow.svg) no-repeat 0% 50%;
 }
+
 .preview__item-title {
 	grid-area: preview-title;
 	font-family: Dystopian, sans-serif;
@@ -312,6 +366,7 @@ a:focus {
 	overflow: hidden;
 	pointer-events: none;
 }
+
 .preview__item-imgwrap {
 	width: 100px;
 	height: 150px;
@@ -320,32 +375,38 @@ a:focus {
 	grid-area: preview-img;
 	transform-origin: 50% 100%;
 }
+
 .preview__item-img {
 	width: 100%;
 	height: 100%;
 	background-size: cover;
 	background-position: 50% 50%;
 }
+
 .preview__item-content {
 	grid-area: preview-content;
 	max-width: calc(1100px - 80vh);
 	min-height: 440px;
 	line-height: 1.3;
 }
+
 .preview__item-meta {
 	color: var(--color-text-alt);
 	text-transform: uppercase;
 	font-size: 0.857rem;
 	padding: 1rem 0 0;
 }
+
 .preview__item-meta span {
 	display: block;
 }
+
 .preview__item-info {
 	display: block;
 	color: var(--color-link);
 	margin: 1rem 0;
 }
+
 .preview__item-button {
 	color: #fff;
 	border: 0;
@@ -360,6 +421,7 @@ a:focus {
 	cursor: pointer;
 	margin-bottom: 1rem;
 }
+
 .preview__item-button.max {
 	background: #000 !important;
 	cursor: auto !important;
@@ -371,18 +433,23 @@ a:focus {
 	outline: none;
 	background: #000;
 }
+
 .cursor {
 	display: none;
 }
+
 @media screen and (min-width: 53em) {
+
 	html,
 	body,
 	main {
 		overflow: hidden;
 	}
+
 	.message {
 		display: none;
 	}
+
 	.frame {
 		position: fixed;
 		z-index: 100;
@@ -402,35 +469,46 @@ a:focus {
 			'... ... ...'
 			'... ... ...';
 	}
+
 	.frame__title-wrap {
 		grid-area: title;
 		display: flex;
 		line-height: 50px;
+		border: 1px solid #333;
+		padding-right: 10px;
+		background: #fff;
 	}
+
 	.frame__title {
 		margin: 0;
 	}
+
 	.frame__tagline {
 		position: relative;
 		margin: 0 0 0 1rem;
 		padding: 0 0 0 1rem;
 		opacity: 0.5;
 	}
+
 	.frame__demos {
 		margin: 0;
 		grid-area: demos;
 		justify-self: end;
 	}
+
 	.frame__links {
 		grid-area: links;
 		padding: 0;
 	}
+
 	.frame a {
 		pointer-events: auto;
 	}
+
 	.content {
 		height: 100%;
 	}
+
 	.preview__item {
 		height: 100%;
 		width: 80vw;
@@ -442,26 +520,32 @@ a:focus {
 			'preview-title preview-title'
 			'preview-img preview-content';
 	}
+
 	.preview__item-title {
 		justify-self: center;
 		padding: 0;
 	}
+
 	.preview__item-meta {
 		padding: 1rem 0;
 	}
+
 	.preview__item-info {
 		margin: 1rem 0 3rem;
 	}
+
 	.preview__item-imgwrap {
 		width: 100%;
 		height: 100%;
 		grid-row-start: 3;
 		border-radius: 10px 10px 0 0;
 	}
+
 	.preview__item-content {
 		padding: 0 0 0 4rem;
 	}
 }
+
 @media (any-pointer: fine) {
 	.cursor {
 		display: block;
@@ -473,17 +557,20 @@ a:focus {
 		pointer-events: none;
 		z-index: 9999;
 	}
+
 	.cursor__svg {
 		pointer-events: none;
 		position: absolute;
 		top: 0;
 		left: 0;
 	}
+
 	.cursor__svg-circle {
 		fill: var(--cursor-fill);
 		stroke: var(--cursor-stroke);
 		stroke-width: var(--cursor-stroke-width);
 	}
+
 	.cursor__text {
 		position: absolute;
 		top: 1.875rem;
